feat: Add Listing creation step 2

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,13 @@ body,
   height: 100%;
 }
 
+.leaflet-bottom,
+.leaflet-control,
+.leaflet-pane,
+.leaflet-top {
+  z-index: 0 !important;
+}
+
 /* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
